syntax = "proto3";
package proto;

import "google/api/annotations.proto";
import "types/basic.proto";

option go_package = ".;proto";


service BlackHoleAPI {
    rpc GetSendBlock (SendBlockRequest) returns (types.StateBlock) {
        option (google.api.http) = {
           post: "/blockhole/getsendblock"
           body: "*"
       };
    }

    rpc GetRewardsBlock (types.Hash) returns (types.StateBlock) {
        option (google.api.http) = {
           post: "/blockhole/getrewardsblock"
           body: "*"
       };
    }

    rpc GetTotalDestroyInfo (types.Address) returns (types.Balance) {
        option (google.api.http) = {
           post: "/blockhole/gettotaldestroyinfo"
           body: "*"
       };
    }

    rpc GetDestroyInfoDetail (types.Address) returns (DestroyInfoDetailResponse) {
        option (google.api.http) = {
           post: "/blockhole/getdestroyinfodetail"
           body: "*"
       };
    }
}

message SendBlockRequest {
    string Owner     = 1;
    string Previous  = 2;
    string Token     = 3;
    int64  Amoun     = 4;
    string Sign      = 5;
}

message DestroyInfoDetailResponse{
    message DestroyInfo  {
        string Owner      = 1;
        string Previous   = 2;
        string Token      = 3;
        int64  Amount      = 4;
        int64 TimeStamp   = 5;
    }
    repeated DestroyInfo infos = 1;
}