syntax = "proto3";
package proto;

import "google/api/annotations.proto";
import "basic.proto";
import "common.proto";

option go_package = ".;proto";

service SettlementAPI {
    rpc ToAddress (CreateContractParam) returns (Address) {
        option (google.api.http) = {
           post: "/settlement/toAddress"
           body: "*"
       };
    }

    rpc GetSettlementRewardsBlock (Hash) returns (StateBlock) {
        option (google.api.http) = {
           get: "/settlement/getSettlementRewardsBlock"
       };
    }

    rpc GetCreateContractBlock (APICreateContractParam) returns (StateBlock) {
        option (google.api.http) = {
           post: "/settlement/getCreateContractBlock"
           body: "*"
       };
    }

    rpc GetSignContractBlock (APISignContractParam) returns (StateBlock) {
        option (google.api.http) = {
           get: "/settlement/getSignContractBlock"
       };
    }

    rpc GetAddPreStopBlock (APIStopParam) returns (StateBlock) {
        option (google.api.http) = {
           post: "/settlement/getAddPreStopBlock"
           body: "*"
       };
    }

    rpc GetRemovePreStopBlock (APIStopParam) returns (StateBlock) {
        option (google.api.http) = {
           post: "/settlement/getRemovePreStopBlock"
           body: "*"
       };
    }

    rpc GetUpdatePreStopBlock (APIUpdateStopParam) returns (StateBlock) {
        option (google.api.http) = {
           post: "/settlement/getUpdatePreStopBlock"
           body: "*"
       };
    }

    rpc GetAddNextStopBlock (APIStopParam) returns (StateBlock) {
        option (google.api.http) = {
           post: "/settlement/getAddNextStopBlock"
           body: "*"
       };
    }

    rpc GetRemoveNextStopBlock (APIStopParam) returns (StateBlock) {
        option (google.api.http) = {
           post: "/settlement/getRemoveNextStopBlock"
           body: "*"
       };
    }

    rpc GetUpdateNextStopBlock (APIUpdateStopParam) returns (StateBlock) {
        option (google.api.http) = {
           post: "/settlement/getUpdateNextStopBlock"
           body: "*"
       };
    }

    rpc GetAllContracts (Offset) returns (APISettlementContracts) {
        option (google.api.http) = {
           get: "/settlement/getAllContracts"
       };
    }

    rpc GetContractsByAddress (ContractsByAddressRequest) returns (APISettlementContracts) {
        option (google.api.http) = {
           get: "/settlement/getContractsByAddress"
       };
    }

    rpc GetContractsByStatus (ContractsByStatusRequest) returns (APISettlementContracts) {
        option (google.api.http) = {
           get: "/settlement/getContractsByStatus"
       };
    }

    rpc GetExpiredContracts (ContractsByAddressRequest) returns (APISettlementContracts) {
        option (google.api.http) = {
           get: "/settlement/getExpiredContracts"
       };
    }

    rpc GetContractsAsPartyA (ContractsByAddressRequest) returns (APISettlementContracts) {
        option (google.api.http) = {
           get: "/settlement/getContractsAsPartyA"
       };
    }

    rpc GetContractsAsPartyB (ContractsByAddressRequest) returns (APISettlementContracts) {
        option (google.api.http) = {
           get: "/settlement/getContractsAsPartyB"
       };
    }

    rpc GetContractAddressByPartyANextStop (ContractAddressByPartyRequest) returns (Address) {
        option (google.api.http) = {
           get: "/settlement/getContractAddressByPartyANextStop"
       };
    }

    rpc GetContractAddressByPartyBPreStop (ContractAddressByPartyRequest) returns (Address) {
        option (google.api.http) = {
           get: "/settlement/getContractAddressByPartyBPreStop"
       };
    }

    rpc GetProcessCDRBlock (ProcessCDRBlockRequest) returns (StateBlock) {
        option (google.api.http) = {
           post: "/settlement/getProcessCDRBlock"
           body: "*"
       };
    }

    rpc GetTerminateContractBlock (APITerminateParam) returns (StateBlock) {
        option (google.api.http) = {
           post: "/settlement/getTerminateContractBlock"
           body: "*"
       };
    }

    rpc GetCDRStatus (CDRStatusRequest) returns (APICDRStatus) {
        option (google.api.http) = {
           get: "/settlement/getCDRStatus"
       };
    }

    rpc GetCDRStatusByCdrData (CDRStatusByCdrDataRequest) returns (APICDRStatus) {
        option (google.api.http) = {
           get: "/settlement/getCDRStatusByCdrData"
       };
    }

    rpc GetCDRStatusByDate (CDRStatusByDateRequest) returns (APICDRStatuses) {
        option (google.api.http) = {
           get: "/settlement/getCDRStatusByDate"
       };
    }

    rpc GetAllCDRStatus (ContractsByAddressRequest) returns (APICDRStatuses) {
        option (google.api.http) = {
           get: "/settlement/getAllCDRStatus"
       };
    }

    rpc GetMultiPartyCDRStatus (MultiPartyCDRStatusRequest) returns (APICDRStatuses) {
        option (google.api.http) = {
           get: "/settlement/getMultiPartyCDRStatus"
       };
    }

//    rpc GetSummaryReport (MultiPartyCDRStatusRequest) returns (SummaryResult) {
//        option (google.api.http) = {
//           get: "/settlement/getSummaryReport"
//       };
//    }
//


}


message APISignContractParam  {
    string contractAddress = 1;
    string address         = 2;
}

message APICreateContractParam  {
    Contractor partyA     = 1;
    Contractor partyB     = 2;
    repeated ContractService services   = 3;
    int64 startDate       = 4;
    int64 endDate         = 5;
}

message APIStopParam {
    StopParam stopParam = 1;
    string     Address  = 2;
}

message APIUpdateStopParam  {
    UpdateStopParam updateStopParam = 1;
    string          address         = 2;
}


message APISettlementContract  {
    ContractParam contractParam = 1;
    string address              = 2;
}

message APISettlementContracts  {
    repeated APISettlementContract contracts = 1;
}

message APITerminateParam {
    TerminateParam terminateParam = 1;
    string address                = 2;
}

message APICDRStatus  {
    string address      = 1;
    CDRStatus cdrStatus = 2;
}

message APICDRStatuses{
    repeated APICDRStatus statuses =1;
}

message APIRegisterAssetParam  {
    Contractor owner       = 1;
    repeated Asset assets  = 2;
    int64    startDate     = 3;
    int64    endDate       = 4;
    string   status        = 5;
}

message ContractsByAddressRequest{
    string addr    = 1;
    int32  count   = 2;
    int32  offset  = 3;
}

message ContractsByStatusRequest{
    string addr    = 1;
    string status  = 2;
    int32  count   = 3;
    int32  offset  = 4;
}

message ContractAddressByPartyRequest{
    string addr      = 1;
    string stopName  = 2;
}

message ProcessCDRBlockRequest{
    string addr               = 1;
    repeated CDRParam params  = 2;
}

message CDRStatusRequest{
    string addr   = 1;
    string hash   = 2;
}

message CDRStatusByCdrDataRequest{
    uint64 addr     = 1;
    uint64 index    = 2;
    string sender   = 3;
    string destination  = 4;
}

message CDRStatusByDateRequest{
    string addr   = 1;
    int64  start  = 2;
    int64  end    = 3;
    int32  count  = 4;
    int32  offset = 5;
}

message MultiPartyCDRStatusRequest{
    string firstAddr   = 1;
    string secondAddr  = 2;
    int32  count       = 3;
    int32  offset      = 4;
}